Bug 415461 - There is no any default wallpaper folder for "Slideshow"
Summary: There is no any default wallpaper folder for "Slideshow"
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Image & Slideshow wallpaper plugins (other bugs)
Version First Reported In: 5.17.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Marco Martin
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2019-12-22 19:51 UTC by Piotr Mierzwinski
Modified: 2020-01-14 21:55 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.18.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Piotr Mierzwinski 2019-12-22 19:51:21 UTC
SUMMARY
I tried to add some live to my desktop and decided to switch from static wallpaper into dynamic like slideshow. I was surprised when I found that there wasn't add any default folder with wallpapers. I believe that Plasma provide couple wallpapers by default, that are install in /usr/share/wallpapers.
I'm not sure if this is issue on Plasma side or maintainers in specific Linux distribution who provide KDE/Plasma desktop in theirs distribution.

STEPS TO REPRODUCE
1. RMB on desktop 
2. "Configure desktop -> Wallpaper"
3. Change value in Wallpaper type from "Image" into "Slideshow"


OBSERVED RESULT
Folders is empty, no any wallpaper available despite in default folder with wallpaper there is couple.

EXPECTED RESULT
Folders has defalut folder with wallpapers like: "/usr/share/wallpapers

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: YES
(available in About System)
KDE Plasma Version: 5.17.4
KDE Frameworks Version: 5.65
Qt Version: 5.13.2

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2020-01-02 17:18:04 UTC
That's a good point.
Comment 2 Nate Graham 2020-01-07 00:28:47 UTC
I submitted a patch to fix this: https://phabricator.kde.org/D26483
Comment 3 Nate Graham 2020-01-14 21:55:48 UTC
Git commit 8be6fb749ced517546f1873196cdb37d7024c7cc by Nate Graham.
Committed on 14/01/2020 at 21:55.
Pushed by ngraham into branch 'master'.

[wallpapers/image] Add default XDG wallpaper locations for slideshow

Summary:
FIXED-IN: 5.18.0
Depends on D26510

Right now when you first change the wallpaper plugin to slideshow, no locations are
pre-configured, so you have to add one yourself. This patch adds a
`preferred:wallpaperlocations` token as the default that gets replaced in the user's
config file at runtime with the XDG wallpaper locations.

Test Plan:
Log in as new user > right-click desktop > configure > change to slideshow wallpaper
See that`/usr/share/wallpapers` is already in the list of wallpaper locations; how nice

Reviewers: #plasma, #vdg, ndavis, davidedmundson

Reviewed By: #plasma, #vdg, ndavis, davidedmundson

Subscribers: davidre, broulik, davidedmundson, ndavis, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D26483

M  +9    -5    wallpapers/image/image.cpp
M  +1    -1    wallpapers/image/slideshowpackage/contents/config/main.xml

https://commits.kde.org/plasma-workspace/8be6fb749ced517546f1873196cdb37d7024c7cc